--- a/expertise.html
+++ b/expertise.html
@@ -36,7 +36,7 @@
       <div class="expertise-info-container aero active">
         <div id="mobile_resultados_container" class="expertise-info-content">
           <h5 class="text bold sans">NUESTRA EXPERTISE ES</h5>
-          <p id="mobile_enfoque">HOLA QUE TAL</p>
+          <p id="mobile_enfoque">NUESTRA EXPERTISE ES</p>
         </div>
       </div>
     </div>
