--- a/caso.html
+++ b/caso.html
@@ -1,107 +1,83 @@
-
-
-    <div class="page-link-container section-padding">
-        <div class="pl-arrow-container">
-            <div class="arrow left border-wine"></div>
-        </div>
-        <a href="/que-hacemos" class="text bold color-wine">QUÉ HACEMOS</a>
+<div class="page-link-container section-padding">
+    <div class="pl-arrow-container">
+        <div class="arrow left border-wine"></div>
     </div>
+    <a href="/que-hacemos" class="text bold color-wine">QUÉ HACEMOS</a>
+</div>
 
-    <div class="page-title-container section-padding">
-        <div class="page-title color-wine text bold sans">
-            <div class="page-title-line bg-wine"></div>
-            <h1>Casos</h1>
-        </div>
+<div class="page-title-container section-padding">
+    <div class="page-title color-wine text bold sans">
+        <div class="page-title-line bg-wine"></div>
+        <h1>Casos</h1>
     </div>
+</div>
 
-
-    <main>
-
-
-
-        <section class="section section-padding">
-
-
-            <div class="casos-item-container-page current-case casos-item-container">
-                <div class="casos-item-content">
-                    <div class="casos-item-title-container">
-                        <span id="mobile_categoria"></span>
-                        <div class="casos-item-icon-container">
-                            <img id="mobile_imagen_categoria" src="" alt="">
-                        </div>
+<main>
+    <section class="section section-padding">
+        <div class="casos-item-container-page current-case casos-item-container">
+            <div class="casos-item-content">
+                <div class="casos-item-title-container">
+                    <span id="mobile_categoria"></span>
+                    <div class="casos-item-icon-container">
+                        <img id="mobile_imagen_categoria" src="" alt="" />
                     </div>
-                    <div class="casos-item-content-container">
-                        <h5 id="mobile_titulo"></h5>
-                        <p id="mobile_bajada"></p>
-
-                    </div>
-
-                    <div class="casos-arrow-container">
-                        <div class="casos-arrow aero ">
-                            <img class="arrow-img aero up" src="/static/img/icons/flechawine.svg" alt="">
-                        </div>
-                    </div>
-
                 </div>
-                <div class="casos-info-container aero active">
-                    <div id="mobile_resultados_container" class="casos-info-content">
+                <div class="casos-item-content-container">
+                    <h5 id="mobile_titulo"></h5>
+                    <p id="mobile_bajada"></p>
+                </div>
+
+                <div class="casos-arrow-container">
+                    <div class="casos-arrow aero">
+                        <img class="arrow-img aero up" src="/static/img/icons/flechawine.svg" alt="" />
+                    </div>
+                </div>
+            </div>
+            <div class="casos-info-container aero active">
+                <div id="mobile_resultados_container" class="casos-info-content">
+                    <h5 class="text bold sans">ENFOQUE</h5>
+                    <p id="mobile_enfoque"></p>
+                    <span>RESULTADO</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="casos-main-container">
+            <div class="casos-main-content">
+                <div class="casos-main-title">
+                    <img style="filter: brightness(999)" id="imagen_categoria" src="" alt="" />
+                    <h2 id="categoria" class="text sans bold"></h2>
+                </div>
+
+                <div class="casos-main-subtitle-container">
+                    <h4 id="titulo" class="text sans bold"></h4>
+                    <p id="bajada" class="text semibold"></p>
+                </div>
+
+                <div class="casos-info-container">
+                    <div id="resultados_container" class="casos-info-content">
                         <h5 class="text bold sans">ENFOQUE</h5>
-                        <p id="mobile_enfoque"></p>
+                        <p id="enfoque" class="text regular"></p>
                         <span>RESULTADO</span>
                     </div>
                 </div>
-            </div>
-
-
-            <div class="casos-main-container">
-                <div class="casos-main-content">
-
-
-                    <div class="casos-main-title">
-                        <img style="filter: brightness(999);" id="imagen_categoria" src="" alt="">
-                        <h2 id="categoria" class="text sans bold"></h2>
-                    </div>
-
-                    <div class="casos-main-subtitle-container">
-                        <h4 id="titulo" class="text sans bold"></h4>
-                        <p id="bajada" class="text semibold"></p>
-                    </div>
-
-                    <div class="casos-info-container">
-                        <div id="resultados_container" class="casos-info-content">
-                            <h5 class="text bold sans">ENFOQUE</h5>
-                            <p id="enfoque" class="text regular"></p>
-                            <span>RESULTADO</span>
-                        </div>
-                    </div>
-<!-- 
+                <!-- 
                     <div class="casos-main-img-container">
                         <div class="img"></div>
                     </div> -->
-
-                </div>
             </div>
+        </div>
+    </section>
 
-        </section>
+    <section class="casospage-casos-container section section-padding">
+        <span class="casospage-casos-title text sans semibold">Otros casos</span>
 
-
-        <section class="casospage-casos-container section section-padding">
-            <span class="casospage-casos-title text sans semibold">Otros casos</span>
-
-            <div id="casos_container" class="casospage-casos-content carrousel-container casos">
-
-                <div class="carrousel-buttons-container h-mobile">
-                    <div onclick="ChangeCarrContent(0, 'casos')" class="carrousel-button bg-grey-thin casos active">
-                    </div>
-                    <div onclick="ChangeCarrContent(1, 'casos')" class="carrousel-button bg-grey-thin casos">
-                    </div>
-                    <div onclick="ChangeCarrContent(2, 'casos')" class="carrousel-button bg-grey-thin casos">
-                    </div>
-                </div>
-
+        <div id="casos_container" class="casospage-casos-content carrousel-container casos">
+            <div class="carrousel-buttons-container h-mobile">
+                <div onclick="ChangeCarrContent(0, 'casos')" class="carrousel-button bg-grey-thin casos active"></div>
+                <div onclick="ChangeCarrContent(1, 'casos')" class="carrousel-button bg-grey-thin casos"></div>
+                <div onclick="ChangeCarrContent(2, 'casos')" class="carrousel-button bg-grey-thin casos"></div>
             </div>
-        </section>
-
-
-
-    </main>
+        </div>
+    </section>
+</main>
