extra info from api to html

--- a/expertise.html
+++ b/expertise.html
@@ -8,7 +8,7 @@
 <div class="page-title-container section-padding">
   <div class="page-title color-wine text bold sans">
     <div class="page-title-line bg-wine"></div>
-    <h1>Expertise</h1>
+    <h1>Servicio</h1>
   </div>
 </div>
 
@@ -29,8 +29,12 @@
       </div>
       <div class="expertise-info-container">
         <div id="mobile_resultados_container" class="expertise-info-content">
-          <h5 class="text bold sans">NUESTRA EXPERTISE ES</h5>
-          <!-- <p id="mobile_enfoque">NUESTRA EXPERTISE ES</p> -->
+          <h5 class="text bold sans">Nuestra Expertise</h5>
+        </div>
+      </div>
+      <div class="expertise-extra-info-container">
+        <div id="mobile_extra_info_container" class="extra-info-content">
+          <h5 class="text bold sans">Más información</h5>
         </div>
       </div>
     </div>
@@ -43,19 +47,19 @@
         </div>
 
         <div class="expertise-main-subtitle-container">
-          <!-- <h4 id="titulo" class="text sans bold"></h4> -->
           <p id="bajada" class="text semibold"></p>
         </div>
 
         <div class="expertise-info-container">
           <div id="resultados_container" class="expertise-info-content">
-            <h5 class="text bold sans">NUESTRA EXPERTISE ES:</h5>
+            <h5 class="text bold sans">Nuestra Expertise</h5>
           </div>
         </div>
-        <!-- 
-                <div class="expertise-main-img-container">
-                    <div class="img"></div>
-                </div> -->
+        <div class="expertise-extra-info-container">
+          <div id="extra_info_container" class="extra-info-content">
+            <h5 class="text bold sans">Más información</h5>
+          </div>
+        </div>
       </div>
     </div>
   </section>
