nuestra expertise arrows

--- a/expertise.html
+++ b/expertise.html
@@ -29,7 +29,12 @@
       </div>
       <div class="expertise-info-container">
         <div id="mobile_resultados_container" class="expertise-info-content">
+          <div class="nuestra-expertise-arrows">
+            <img class="left-arrow no-visible" src="/static/img/icons/flechagris.svg" alt="left arrow">
+            <img class="right-arrow" src="/static/img/icons/flechagris.svg" alt="right arrow">
+          </div>
           <h5 class="text bold sans">Nuestra Expertise</h5>
+          <div id="mobile_nuestra_expertise_items_container" class="nuestra-expertise-content"></div>
         </div>
       </div>
       <div class="expertise-extra-info-container">
@@ -53,6 +58,7 @@
         <div class="expertise-info-container">
           <div id="resultados_container" class="expertise-info-content">
             <h5 class="text bold sans">Nuestra Expertise</h5>
+            <div id="nuestra_expertise_items_container" class="nuestra-expertise-content"></div>
           </div>
         </div>
         <div class="expertise-extra-info-container">
