desktop expertise styles

--- a/expertise.html
+++ b/expertise.html
@@ -57,6 +57,10 @@
 
         <div class="expertise-info-container">
           <div id="resultados_container" class="expertise-info-content">
+            <div class="nuestra-expertise-arrows">
+              <img class="left-arrow no-visible" src="/static/img/icons/flechagris.svg" alt="left arrow">
+              <img class="right-arrow" src="/static/img/icons/flechagris.svg" alt="right arrow">
+            </div>
             <h5 class="text bold sans">Nuestra Expertise</h5>
             <div id="nuestra_expertise_items_container" class="nuestra-expertise-content"></div>
           </div>
