expertise carrousel buttons

--- a/expertise.html
+++ b/expertise.html
@@ -35,7 +35,10 @@
           </div>
           <h5 class="text bold sans">Nuestra Expertise</h5>
           <div id="mobile_nuestra_expertise_items_container" class="nuestra-expertise-content"></div>
+          <div id="carrousel-buttons" class="carrousel-buttons-container">
+          </div>
         </div>
+
       </div>
       <div class="expertise-extra-info-container">
         <div id="mobile_extra_info_container" class="extra-info-content">
