--- a/expertise.html
+++ b/expertise.html
@@ -30,8 +30,12 @@
       <div class="expertise-info-container">
         <div id="mobile_resultados_container" class="expertise-info-content">
           <div class="nuestra-expertise-arrows">
-            <img class="left-arrow no-visible" src="/static/img/icons/flechagris.svg" alt="left arrow">
-            <img class="right-arrow" src="/static/img/icons/flechagris.svg" alt="right arrow">
+            <button class="left-arrow no-visible">
+              <img src="/static/img/icons/flechagris.svg" alt="left arrow">
+            </button>
+            <button class="right-arrow">
+              <img src="/static/img/icons/flechagris.svg" alt="right arrow">
+            </button>
           </div>
           <h5 class="text bold sans">Nuestra Expertise</h5>
           <div id="mobile_nuestra_expertise_items_container" class="nuestra-expertise-content"></div>
