added blog button

--- a/home.html
+++ b/home.html
@@ -1,37 +1,36 @@
+<main>
+	<div class="background-container"></div>
 
-
-	<main>
-		<div class="background-container"></div>
-
-		<div class="container animate hero-container initial">
-			<div class="hero-logo-container">
-				<img src="/static/img/logos/D2B-BLANCO.png" alt="">
+	<div class="container animate hero-container initial">
+		<div class="hero-logo-container">
+			<img src="/static/img/logos/D2B-BLANCO.png" alt="">
+		</div>
+		<div class="hero-content">
+			<div class="hero-text-container">
+				<h1>Inteligencia <br> Digital.</h1>
 			</div>
-			<div class="hero-content">
-				<div class="hero-text-container">
-					<h1>Inteligencia <br> Digital.</h1>
-				</div>
-				<div class="hero-buttons-container">
-					<a href="/quienes-somos" class="btn btn-green hover-transparent shadow">QuIÉNES Somos</a>
-					<a href="/que-hacemos" class="btn btn-wine hover-transparent shadow">Qué Hacemos</a>
-				</div>
+			<div class="hero-buttons-container">
+				<a href="/quienes-somos" class="btn btn-green hover-transparent shadow">QuIÉNES Somos</a>
+				<a href="/que-hacemos" class="btn btn-wine hover-transparent shadow">Qué Hacemos</a>
+				<a href="https://d2b.cl/blog" target="_blank" class="btn btn-green hover-transparent shadow">Nuestro Blog</a>
 			</div>
 		</div>
-	</main>
+	</div>
+</main>
 
-	<!-- MAIL START -->
-	<a href="/contacto">
-		<div class="container mail-container initial">
-			<div class="mail-content">
-				<div class="box"></div>
-				<div class="triangle"></div>
-			</div>
+<!-- MAIL START -->
+<a href="/contacto">
+	<div class="container mail-container initial">
+		<div class="mail-content">
+			<div class="box"></div>
+			<div class="triangle"></div>
 		</div>
-	</a>
-	<!-- MAIL END -->
+	</div>
+</a>
+<!-- MAIL END -->
 
-	<script src="/static/js/index.min.js"></script>
-    <script src="/static/js/contentRouter.js"></script>
+<script src="/static/js/index.min.js"></script>
+<script src="/static/js/contentRouter.js"></script>
 
 </body>
 
