--- a/quehacemos.html
+++ b/quehacemos.html
@@ -455,6 +455,7 @@
                     <h4 id="clientes_titulo" class="color-white"></h4>
                     <div class="section-title-line bg-white"></div>
                 </div>
+                <h5 id="clientes_bajada" class="color-white"></h5>
 
                 <div class="clientes-logos-container carrousel-container cliente">
 
