--- a/navbar.html
+++ b/navbar.html
@@ -24,7 +24,7 @@
 				<div class="navbar-menu navbar-second-menu">
 					<p>Qué Hacemos</p>
 					<ul>
-						<li class="navbar-menu-item"><a href="/que-hacemos#expertise">expertise</a></li>
+						<li class="navbar-menu-item"><a href="/que-hacemos#expertise">Servicios</a></li>
 						<li class="navbar-menu-item"><a href="/que-hacemos#casos">Casos</a></li>
 						<li class="navbar-menu-item"><a href="/que-hacemos#clientes">Clientes</a></li>
 						<li class="navbar-menu-item"><a href="/que-hacemos#partners">Partners</a></li>
