css & html & js for login

--- a/home.html
+++ b/home.html
@@ -31,6 +31,8 @@
 
 <script src="/static/js/index.min.js"></script>
 <script src="/static/js/contentRouter.js"></script>
+<script defer src="/static/js/api.js"></script>
+<script defer src="/static/js/auth.js"></script>
 
 </body>
 
