Address added on footer

--- a/footer.html
+++ b/footer.html
@@ -28,12 +28,11 @@
                 <img class="up" src="/static/img/icons/flechagris.svg" alt="">
             </div>
         </div>
-        <!-- <div class="footer-content section-padding">
+        <div class="footer-content section-padding">
             <div class="footer-links-container">
-                <span class="direccion">Dirección: Nueva Tajamar 481, Oficina 808, Las Condes, Región
-                    Metropolitana</span>
+                <span class="direccion">Dirección: Av. Apoquindo No 6410, Of. 212, Las Condes, Santiago, Chile</span>
             </div>
-        </div> -->
+        </div>
     </div>
 </footer>
 
