casos carrousel in quehacemos (js, html, css)

--- a/quehacemos.html
+++ b/quehacemos.html
@@ -389,9 +389,9 @@
         <div id="que_hacemos_items" class="hq-herocarrousel-content carrousel-container hero">
 
             <div class="carrousel-buttons-container h-mobile">
-                <div onclick="ChangeCarrContent(0, 'hero')" class="carrousel-button bg-white hero"></div>
-                <div onclick="ChangeCarrContent(1, 'hero')" class="carrousel-button bg-white hero active"></div>
-                <div onclick="ChangeCarrContent(2, 'hero')" class="carrousel-button bg-white hero"></div>
+                <div class="carrousel-button bg-white hero"></div>
+                <div class="carrousel-button bg-white hero active"></div>
+                <div class="carrousel-button bg-white hero"></div>
             </div>
             <!-- <div class="arrowdown-container bg-wine animated-arrow-container">
                     <img class="down" src="/static/img/icons/flechablanca.svg" alt="">
@@ -429,17 +429,23 @@
                     <div class="section-title-line bg-wine"></div>
                 </div>
 
-                <div id="casos_container" class="casos-data-container carrousel-container casos">
-
-                    <div class="carrousel-buttons-container h-mobile">
-                        <div onclick="ChangeCarrContent(0, 'casos')" class="carrousel-button bg-grey-thin casos active">
+                <div id="casos_container" class="casos-data-container">
+                </div>
+                <div class="carrousel-buttons">
+                    <div class="carrousel-buttons-container">
+                        <div class="carrousel-button casos-carrousel-button bg-grey-thin active">
                         </div>
-                        <div onclick="ChangeCarrContent(1, 'casos')" class="carrousel-button bg-grey-thin casos">
+                        <div class="carrousel-button casos-carrousel-button bg-grey-thin">
                         </div>
-                        <div onclick="ChangeCarrContent(2, 'casos')" class="carrousel-button bg-grey-thin casos">
+                        <div class="carrousel-button casos-carrousel-button bg-grey-thin">
+                        </div>
+                        <div class="carrousel-button casos-carrousel-button bg-grey-thin">
+                        </div>
+                        <div class="carrousel-button casos-carrousel-button bg-grey-thin h-tablet"> 
+                        </div>
+                        <div class="carrousel-button casos-carrousel-button bg-grey-thin h-mobile">
                         </div>
                     </div>
-
                 </div>
 
             </div>
