carrousel casos page

--- a/caso.html
+++ b/caso.html
@@ -73,10 +73,21 @@
         <span class="casospage-casos-title text sans semibold">Otros casos</span>
 
         <div id="casos_container" class="casospage-casos-content carrousel-container casos">
-            <div class="carrousel-buttons-container h-mobile">
-                <div onclick="ChangeCarrContent(0, 'casos')" class="carrousel-button bg-grey-thin casos active"></div>
-                <div onclick="ChangeCarrContent(1, 'casos')" class="carrousel-button bg-grey-thin casos"></div>
-                <div onclick="ChangeCarrContent(2, 'casos')" class="carrousel-button bg-grey-thin casos"></div>
+        </div>
+        <div class="carrousel-buttons">
+            <div class="carrousel-buttons-container">
+                <div class="carrousel-button casos-carrousel-button bg-grey-thin active">
+                </div>
+                <div class="carrousel-button casos-carrousel-button bg-grey-thin">
+                </div>
+                <div class="carrousel-button casos-carrousel-button bg-grey-thin">
+                </div>
+                <div class="carrousel-button casos-carrousel-button bg-grey-thin">
+                </div>
+                <div class="carrousel-button casos-carrousel-button bg-grey-thin h-tablet"> 
+                </div>
+                <div class="carrousel-button casos-carrousel-button bg-grey-thin h-mobile">
+                </div>
             </div>
         </div>
     </section>
