que-hacemos carrousel buttons fixed

--- a/quehacemos.html
+++ b/quehacemos.html
@@ -389,9 +389,9 @@
         <div id="que_hacemos_items" class="hq-herocarrousel-content carrousel-container hero">
 
             <div class="carrousel-buttons-container h-mobile">
-                <div class="carrousel-button bg-white hero"></div>
-                <div class="carrousel-button bg-white hero active"></div>
-                <div class="carrousel-button bg-white hero"></div>
+                <div onclick="ChangeCarrContent(0, 'hero')" class="carrousel-button bg-white hero"></div>
+                <div onclick="ChangeCarrContent(1, 'hero')" class="carrousel-button bg-white hero active"></div>
+                <div onclick="ChangeCarrContent(2, 'hero')" class="carrousel-button bg-white hero"></div>
             </div>
             <!-- <div class="arrowdown-container bg-wine animated-arrow-container">
                     <img class="down" src="/static/img/icons/flechablanca.svg" alt="">
