carrousel servicios scroll fixed

--- a/servicio.html
+++ b/servicio.html
@@ -30,10 +30,10 @@
       <div class="expertise-info-container">
         <div id="mobile_resultados_container" class="expertise-info-content">
           <div class="nuestra-expertise-arrows">
-            <button class="left-arrow no-visible">
+            <button class="left-arrow no-visible" type="button">
               <img src="/static/img/icons/flechagris.svg" alt="left arrow">
             </button>
-            <button class="right-arrow">
+            <button class="right-arrow" type="button">
               <img src="/static/img/icons/flechagris.svg" alt="right arrow">
             </button>
           </div>
