--- a/caso.html
+++ b/caso.html
@@ -84,7 +84,9 @@
                 </div>
                 <div class="carrousel-button casos-carrousel-button bg-grey-thin">
                 </div>
-                <div class="carrousel-button casos-carrousel-button bg-grey-thin h-tablet"> 
+                <div class="carrousel-button casos-carrousel-button bg-grey-thin">
+                </div>
+                <div class="carrousel-button casos-carrousel-button bg-grey-thin h-tablet">
                 </div>
                 <div class="carrousel-button casos-carrousel-button bg-grey-thin h-mobile">
                 </div>
