--- a/expertos-personalizacion.html
+++ b/expertos-personalizacion.html
@@ -1,32 +1,27 @@
-<div class="page-link-container section-padding">
-  <a href="/que-hacemos" class="text bold color-wine"><div class="arrow left border-wine"></div>QUÉ HACEMOS</a>
-</div>
-
-<div class="page-title-container section-padding">
-  <div class="page-title">
-    <h1 class="color-wine text bold sans">Expertos en personalización</h1>
-  </div>
-</div>
-
 <main>
-  <section class="section section-padding">
-    <div class="landing-page-title-container">
-      <h2 class="color-dark-wine text bold sans">Por qué contar con estrategias de personalización</h2>
-    </div>
-    <div class="landing-page-content color-gray">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <ul>
-        <li>Elemento 1</li>
-        <li>Elemento 2</li>
-        <li>Elemento adicional</li>
-      </ul>
-      <p> Duis aute irure dolor in reprehenderit in voluptate velit
-        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-  </section>
+  <div class="section-container purple-grandient-background">
+    <section class="section section-padding color-white">
+      <div class="landing-page-title-container">
+        <div>
+          <h1 class="text bold sans">Aumenta tus conversiones basadas en datos reales de tus usarios</h1>
+          <button class="color-white bg-wine">Botón principal</button>
+        </div>
+        <img src="/static/img/expertos-personalizacion/Illustration.webp" alt="">
+      </div>
+      <div class="landing-page-content">
+        <h3 class="bold">Lorem ipsum dolor sit amet consectetur.</h3>
+        <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p> Duis aute irure dolor in reprehenderit in voluptate velit
+          esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+          qui officia deserunt mollit anim id est laborum.</p>
+          <p class="text bold">Excepteur sint occaecat cupidatat non proident, sunt in culpa
+            qui officia deserunt mollit anim id est laborum.</p>
+          <button class="bg-white color-wine">Botón secundario</button>
+      </div>
+    </section>
+  </div>
   <section class="section section-padding">
     <div class="landing-page-title-container">
       <h2 class="color-dark-wine text bold sans">Cómo lo hacemos</h2>
